--- a/src/xrEngine/xrEngine.vcxproj
+++ b/src/xrEngine/xrEngine.vcxproj
@@ -266,6 +266,7 @@
     <ClInclude Include="std_classes.h" />
     <ClInclude Include="StringTable\IStringTable.h" />
     <ClInclude Include="StringTable\IStringTableDefs.h" />
+    <ClInclude Include="TaskScheduler.hpp" />
     <ClInclude Include="Text_Console.h" />
     <ClInclude Include="thunderbolt.h" />
     <ClInclude Include="tntQAVI.h" />
@@ -378,6 +379,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="StringTable\IStringTable.cpp" />
+    <ClCompile Include="TaskScheduler.cpp" />
     <ClCompile Include="Text_Console.cpp" />
     <ClCompile Include="Text_Console_WndProc.cpp" />
     <ClCompile Include="thunderbolt.cpp" />
