--- a/src/xrEngine/xrEngine.vcxproj.filters
+++ b/src/xrEngine/xrEngine.vcxproj.filters
@@ -582,6 +582,9 @@
     <ClInclude Include="MonitorManager.hpp">
       <Filter>Interfaces\MonitorManager</Filter>
     </ClInclude>
+    <ClInclude Include="TaskScheduler.hpp">
+      <Filter>Interfaces\Sheduler</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="defines.cpp">
@@ -907,6 +910,9 @@
     </ClCompile>
     <ClCompile Include="MonitorManager.cpp">
       <Filter>Interfaces\MonitorManager</Filter>
+    </ClCompile>
+    <ClCompile Include="TaskScheduler.cpp">
+      <Filter>Interfaces\Sheduler</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
