Linux build: removed pugixml linking

--- a/src/xrUICore/CMakeLists.txt
+++ b/src/xrUICore/CMakeLists.txt
@@ -81,5 +81,5 @@ target_include_directories(xrUICore PRIVATE
     ../../Externals/lzo/include
     ../../Externals/luabind
     ${SDL_INCLUDE_DIRS})
-target_link_libraries(xrUICore xrAPI pugixml xrScriptEngine ${LUAJIT_LIBRARIES} xrEngine xrMiscMath xrCore luabind ${SDL_LIBRARIES})
+target_link_libraries(xrUICore xrAPI xrScriptEngine ${LUAJIT_LIBRARIES} xrEngine xrMiscMath xrCore luabind ${SDL_LIBRARIES})
 xr_install(${PROJECT_NAME})
