[CMake] fix Linux build. (And now dont remove cryptopp and tbb from SDK)

--- a/src/xrGame/CMakeLists.txt
+++ b/src/xrGame/CMakeLists.txt
@@ -39,12 +39,13 @@ add_dir("${DIRS}")
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}/../xrServerEntities
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/cximage
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/GameSpy/src
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/luabind
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/ode/include
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/OpenAutomate/inc
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
     ${SDL_INCLUDE_DIRS}
     )
 
