Fixed NatVis again

--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -219,6 +219,9 @@
   <ItemGroup>
     <None Include="CommonImportExport.inl" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\OpenXRay.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
