--- a/src/utils/xrLCUtil/xrLCUtil.vcxproj
+++ b/src/utils/xrLCUtil/xrLCUtil.vcxproj
@@ -178,6 +178,9 @@
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\OpenXRay.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
