--- a/src/xrCDB/xrCDB.vcxproj.filters
+++ b/src/xrCDB/xrCDB.vcxproj.filters
@@ -87,4 +87,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\OpenXRay.natvis" />
+  </ItemGroup>
 </Project>
