--- a/src/xrScriptEngine/xrScriptEngine.vcxproj.filters
+++ b/src/xrScriptEngine/xrScriptEngine.vcxproj.filters
@@ -165,4 +165,7 @@
       <Filter>Engine</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\OpenXRay.natvis" />
+  </ItemGroup>
 </Project>
