--- a/src/Layers/xrRenderPC_R1/xrRender_R1.vcxproj.filters
+++ b/src/Layers/xrRenderPC_R1/xrRender_R1.vcxproj.filters
@@ -970,6 +970,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="..\xrRender\xrRender.natvis" />
+    <Natvis Include="..\..\OpenXRay.natvis" />
   </ItemGroup>
 </Project>
