--- a/src/Layers/xrRenderPC_R2/xrRender_R2.vcxproj.filters
+++ b/src/Layers/xrRenderPC_R2/xrRender_R2.vcxproj.filters
@@ -1114,6 +1114,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="..\xrRender\xrRender.natvis" />
+    <Natvis Include="..\..\OpenXRay.natvis" />
   </ItemGroup>
 </Project>
