--- a/src/xrCore/xrCore.vcxproj.filters
+++ b/src/xrCore/xrCore.vcxproj.filters
@@ -758,6 +758,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="xrCore.natvis" />
+    <Natvis Include="..\OpenXRay.natvis" />
   </ItemGroup>
 </Project>
