--- a/src/xrGameSpy/xrGameSpy.vcxproj.filters
+++ b/src/xrGameSpy/xrGameSpy.vcxproj.filters
@@ -99,4 +99,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\OpenXRay.natvis" />
+  </ItemGroup>
 </Project>
