--- a/src/xrNetServer/xrNetServer.vcxproj.filters
+++ b/src/xrNetServer/xrNetServer.vcxproj.filters
@@ -26,4 +26,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\OpenXRay.natvis" />
+  </ItemGroup>
 </Project>
