--- a/src/xrPhysics/xrPhysics.vcxproj.filters
+++ b/src/xrPhysics/xrPhysics.vcxproj.filters
@@ -597,4 +597,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\OpenXRay.natvis" />
+  </ItemGroup>
 </Project>
