--- a/src/xrUICore/xrUICore.vcxproj.filters
+++ b/src/xrUICore/xrUICore.vcxproj.filters
@@ -425,4 +425,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\OpenXRay.natvis" />
+  </ItemGroup>
 </Project>
