--- a/src/xr_3da/xr_3da.vcxproj.filters
+++ b/src/xr_3da/xr_3da.vcxproj.filters
@@ -38,4 +38,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\OpenXRay.natvis" />
+  </ItemGroup>
 </Project>
