--- a/src/Common.props
+++ b/src/Common.props
@@ -39,8 +39,11 @@
   </PropertyGroup>
 
   <PropertyGroup Label="UserMacros">
-    <xrPlatformToolset Condition="'$(VisualStudioVersion)'=='15.0'">v141</xrPlatformToolset>
-    <xrPlatformToolset Condition="'$(VisualStudioVersion)'=='16.0'">v142</xrPlatformToolset>
+    <!-- Default is v142 -->
+    <xrPlatformToolset>v142</xrPlatformToolset>
+    
+    <!-- v141 is allowed -->
+    <xrPlatformToolset Condition="'$(DefaultPlatformToolset)'=='v141'">v141</xrPlatformToolset>
   </PropertyGroup>
 
   <PropertyGroup Label="UserMacros">
