--- a/src/xrUICore/CMakeLists.txt
+++ b/src/xrUICore/CMakeLists.txt
@@ -83,5 +83,8 @@ target_include_directories(xrUICore PRIVATE
     ../../Externals/lzo/include
     ../../Externals/luabind
     ${SDL_INCLUDE_DIRS})
-target_link_libraries(xrUICore xrAPI xrScriptEngine ${LUAJIT_LIBRARIES} xrEngine xrMiscMath xrCore luabind ${SDL_LIBRARIES})
-xr_install(${PROJECT_NAME})
+target_link_libraries(xrUICore xrAPI xrScriptEngine ${LUAJIT_LIBRARIES} xrEngine xrMiscMath xrCore xrLuabind ${SDL_LIBRARIES})
+
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION /usr/lib PERMISSIONS OWNER_READ OWNER_WRITE 
+    GROUP_READ 
+    WORLD_READ )
