--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,29 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 set(CMAKE_SKIP_BUILD_RPATH TRUE)
 if(NOT WIN32)
 	set(CMAKE_INSTALL_PREFIX "") # Skip all *nix-style installing for a while. Use DESTDIR
+    IF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
+        set(CPACK_PACKAGE_NAME "openxray")
+        set(CPACK_FILE_NAME "openxray")
+        set(CPACK_DEBIAN_FILE_NAME "DEB-DEFAULT")
+        set(CPACK_PACKAGE_VERSION "1.6.02")
+        set(CPACK_PACKAGE_CONTACT "lya Orlov <eagleivg@mail.ru>")
+        set(CPACK_PACKAGE_DESCRIPTION "X-Ray Engine 1.6 expansion")
+        set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${CPACK_PACKAGE_DESCRIPTION})
+        set(CPACK_DEBIAN_PACKAGE_SECTION "games")
+        set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/OpenXRay/xray-16")
+        set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6, libsdl2-2.0-0, libopenal1, libtbb2, libcrypto++6, liblockfile1, libfreeimage3, libfreeimageplus3, liblua5.1-0, libogg0, libtheora0, libvorbis0a, liblzo2-2, libjpeg-turbo8")
+        set(CPACK_STRIP_FILES TRUE)
+        set(CPACK_GENERATOR DEB)
+        set(CPACK_SOURCE_IGNORE_FILES "/.gitattributes")
+        set(CPACK_RESOURCE_FILE_README ${PROJECT_SOURCE_DIR}/README.md)
+        set(CPACK_RESOURCE_FILE_LICENSE ${PROJECT_SOURCE_DIR}/License.txt)
+        set(CPACK_DEBIAN_PACKAGE_CONTROL_STRICT_PERMISSION TRUE)
+        set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS ON)
+        set(CPACK_DEBIAN_REVISON "ubuntu-bionic-a1")
+        set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_DEBIAN_REVISON}_${_OS_ARCH}")
+        set(CPACK_DEBIAN_PACKAGE_SOURCE "OpenXRay")
+        INCLUDE(CPack)
+    ENDIF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
 endif()
 
 option ( TBB_PARALLEL "Use tbb::parallel for prarticle and skinning acceleration on SMP." ON )
@@ -63,26 +86,40 @@ if(CCACHE_FOUND)
 endif(CCACHE_FOUND)
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0)
-        message(FATAL_ERROR "Building with a gcc version less than 7.0 is not supported.")
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.0)
+        message(FATAL_ERROR "Building with a gcc version less than 8.0 is not supported.")
+    endif()
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-command-line-argument -Wno-inconsistent-missing-override")
+    if(NOT USED_CXX_LIB)
+        set(USED_CXX_LIB "libstdcpp" CACHE STRING "" FORCE)
+    endif()
+    if(${USED_CXX_LIB} STREQUAL "libstdcpp")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
+    elseif(${USED_CXX_LIB} STREQUAL "libcpp")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
     endif()
 endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive --std=c++17 -Wno-attributes -pipe -Wl,--no-undefined -fvisibility=hidden")
 
 #set (SANITIZE_FLAGS "-fsanitize=address  -fsanitize=leak -fno-omit-frame-pointer -g -fsanitize=undefined -fno-sanitize=vptr")
+#if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+#    set (SANITIZE_FLAGS "-shared-libasan ${SANITIZE_FLAGS}")
+#endif()
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SANITIZE_FLAGS}")
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SANITIZE_FLAGS}")
 set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${SANITIZE_FLAGS}")
 set (CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${SANITIZE_FLAGS}")
 
-set(LUA_LIBRARIES luajit)
+set(LUA_LIBRARIES xrLuajit)
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
 endif()
 
-add_definitions ( -msse2 -mfpmath=sse )
+add_definitions ( -msse3 -mfpmath=sse )
 
 if( TBB_PARALLEL )
   add_definitions ( -DUSE_TBB_PARALLEL )
@@ -95,8 +132,13 @@ endif()
 if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     add_definitions(-DDEBUG -DMIXED)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Og")
-    set(LUA_LIBRARIES luajit-debug)
+    set(LUA_LIBRARIES xrLuajit-debug)
 endif()
+
+if (CMAKE_BUILD_TYPE STREQUAL Release)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+            COMMAND ${CMAKE_STRIP} ${PROJECT_NAME})
+endif ()
 
 set(LUA_FOUND true)
 
@@ -128,3 +170,4 @@ include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/Common )
 
 add_subdirectory(Externals)
 add_subdirectory(src)
+add_subdirectory(res)
