--- a/Externals/ode/CMakeLists.txt
+++ b/Externals/ode/CMakeLists.txt
@@ -10,7 +10,10 @@ add_dir("${DIRS}")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_definitions(-DdSINGLE -DdNODEBUG -D_SECURE_SCL=0 -DLINUX -D_cdecl= -D__forceinline=inline)
+add_definitions(-DdNODEBUG -DLINUX)
 
 add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
-xr_install(${PROJECT_NAME})
+
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION /usr/lib PERMISSIONS OWNER_READ OWNER_WRITE 
+    GROUP_READ 
+    WORLD_READ )
