--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,5 @@ add_subdirectory(xrParticles)
 add_subdirectory(xrPhysics)
 add_subdirectory(xrScriptEngine)
 add_subdirectory(xrSound)
+
+#add_subdirectory(xrMicroBenchmark)
