--- a/src/xrScriptEngine/CMakeLists.txt
+++ b/src/xrScriptEngine/CMakeLists.txt
@@ -23,6 +23,9 @@ set_target_properties(${PROJECT_NAME} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "
 cotire(${PROJECT_NAME})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
-target_link_libraries(${PROJECT_NAME} xrAPI xrCore luabind ${LUA_LIBRARIES})
-xr_install(${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME} xrAPI xrCore xrLuabind ${LUA_LIBRARIES})
+
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION /usr/lib PERMISSIONS OWNER_READ OWNER_WRITE 
+    GROUP_READ 
+    WORLD_READ )
 
