--- a/src/xr_3da/CMakeLists.txt
+++ b/src/xr_3da/CMakeLists.txt
@@ -18,10 +18,8 @@ add_executable(${PROJECT_NAME} ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__IN
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrCore xrAPI xrEngine)
-xr_install(${PROJECT_NAME})
-if(UNIX) # Yes, we have shell
-    install(FILES xr_3da.sh DESTINATION "."
-        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
-            GROUP_READ GROUP_EXECUTE
-            WORLD_READ WORLD_EXECUTE)
-endif()
+
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION /usr/games PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    GROUP_READ GROUP_EXECUTE
+    WORLD_READ WORLD_EXECUTE)
+
