--- a/src/xrAICore/xrAICore.vcxproj.filters
+++ b/src/xrAICore/xrAICore.vcxproj.filters
@@ -369,6 +369,9 @@
     <ClInclude Include="pch.hpp">
       <Filter>Kernel</Filter>
     </ClInclude>
+    <ClInclude Include="Navigation\level_graph_manager.h">
+      <Filter>AI\Navigation\LevelGraph</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Navigation\game_graph_script.cpp">
