--- a/.travis.yml
+++ b/.travis.yml
@@ -98,22 +98,14 @@ before_script:
 
 script:
 - if [ $TRAVIS_OS_NAME == linux ]; then make -j $core_count && file src/xrCore/xrCore.so; fi
-- ./coccinelle/run-coccinelle.sh -i
-- git diff --exit-code
-- export CFLAGS="-Wall -Werror"
-- export LDFLAGS="-pthread -lpthread"
-- ./autogen.sh
-- rm -Rf build
-- mkdir build
-- cd build
-- ../configure --enable-tests --with-distro=unknown
+- cd bin
 - pvs-studio-analyzer credentials $PVS_USERNAME $PVS_KEY -o PVS-Studio.lic
 - pvs-studio-analyzer trace -- make -j4
 - pvs-studio-analyzer analyze -j2 -l PVS-Studio.lic
      -o PVS-Studio-${CC}.log
      --disableLicenseExpirationCheck
 - plog-converter -t html PVS-Studio-${CC}.log -o PVS-Studio-${CC}.html
-- sendemail -t mail@domain.com
+- sendemail -t openxray@yahoo.com
              -u "PVS-Studio $CC report, commit:$TRAVIS_COMMIT"
              -m "PVS-Studio $CC report, commit:$TRAVIS_COMMIT"
              -s smtp.gmail.com:587
