Added PlatformBSD.inl to the Common project project file

--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -215,6 +215,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="CommonImportExport.inl" />
+    <None Include="PlatformBSD.inl" />
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\OpenXRay.natvis" />
